Automatically push dev doc from CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -308,6 +308,46 @@ jobs:
           fi
       - save_data_cache
 
+    deploy:
+        docker:
+            - image: circleci/python:3.7
+        steps:
+            - attach_workspace:
+                at: /tmp/build
+            - run:
+                name: Fetch docs
+                command: |
+                    set -e
+                    mkdir -p ~/.ssh
+                    echo -e "Host *\nStrictHostKeyChecking no" > ~/.ssh/config
+                    chmod og= ~/.ssh/config
+                    if [ ! -d ~/nilearn.github.io ]; then
+                        git clone git@github.com:nilearn/nilearn.github.io.git ~/nilearn.github.io --depth=1
+                    fi
+            - run:
+                name: Deploy dev docs
+                command: |
+                    set -e;
+                    if [ "${CIRCLE_BRANCH}" == "master" ]; then
+                        git config --global user.email "circle@nilearn.com";
+                        git config --global user.name "CircleCI";
+                        cd ~/nilearn.github.io;
+                        git checkout master
+                        git remote -v
+                        git fetch origin
+                        git reset --hard origin/master
+                        git clean -xdf
+                        echo "Deploying dev docs for ${CIRCLE_BRANCH}.";
+                        rm -Rf dev;
+                        cp -a /tmp/build/html dev;
+                        git add -A;
+                        git commit -m "CircleCI update of dev docs ($(CIRCLE_BUILD_NUM)).";
+                        git push origin master;
+                    else
+                        echo "No deployment (build: ${CIRCLE_BRANCH}).";
+                    fi
+
+
 workflows:
   version: 2
 
