iRemove trailing spaces and empty lines
Note that nilearn/plotting/glass_brain_files/svg_to_json_converter.py
has been modified to produce JSON files without trailing spaces. Instead
of directly modifying JSON files, I had the above script regenerate them.

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,3 +8,4 @@ omit =
     */nilearn/conftest.py
     */nilearn/version.py
     */nilearn/datasets/data/convert_templates.py
+    */nilearn/plotting/glass_brain_files/svg_to_json_converter.py
