Add requirements from txt files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,76 @@
 [bdist_rpm]
 doc-files = doc
 
+[options]
+python_requires = >=3.6
+install_requires =
+	numpy==1.16
+	scipy==1.2.0
+	pandas==0.24.0
+	scikit-learn==0.21.0
+	joblib==0.12
+	nibabel==2.5.0
+	pytest
+	pytest-cov
+	lxml
+	codecov
+tests_require =
+    pytest>=3.9
+	pytest-cov
+	coverage
+	scipy
+	scikit-learn
+	joblib
+	pandas
+	matplotlib
+	plotly
+	kaleido
+	nibabel
+	numpy
+	cython
+	requests
+
+[options.extras_require]
+doc =
+    numpy
+	cython
+	scipy
+	flake8
+	lxml
+	mkl
+	sphinx
+	sphinx-gallery
+	sphinxcontrib-bibtex
+	sphinx-copybutton
+	numpydoc
+	coverage
+	pillow
+	pandas
+	nibabel
+	scikit-learn
+	joblib
+	matplotlib
+	plotly
+	kaleido
+test =
+	pytest>=3.9
+	pytest-cov
+	coverage
+	scipy
+	scikit-learn
+	joblib
+	pandas
+	matplotlib
+	plotly
+	kaleido
+	nibabel
+	numpy
+	cython
+	requests
+dev =
+    %(doc)s
+    %(test)s
+
 [flake8]
 # For PEP8 error codes see
 # http://pep8.readthedocs.org/en/latest/intro.html#error-codes
