Create new `min` dependency group with oldest useable versions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,15 +7,15 @@ doc-files = doc
 python_requires = >=3.6
 install_requires =
 	codecov
-	joblib==0.12
+	joblib>=0.12
 	lxml
-	nibabel==2.5.0
-	numpy==1.16
-	pandas==0.24.0
+	nibabel>=2.5.0
+	numpy>=1.16
+	pandas>=0.24.0
 	pytest
 	pytest-cov
-	scikit-learn==0.21.0
-	scipy==1.2.0
+	scikit-learn>=0.21.0
+	scipy>=1.2.0
 tests_require =
 	coverage
 	cython
@@ -42,6 +42,17 @@ doc =
 	sphinx-gallery
 	sphinxcontrib-bibtex
 	sphinx-copybutton
+min =
+	codecov
+	joblib==0.12
+	lxml
+	nibabel==2.5.0
+	numpy==1.16
+	pandas==0.24.0
+	pytest
+	pytest-cov
+	scikit-learn==0.21.0
+	scipy==1.2.0
 test =
 	coverage
 	cython
