Try to use appropriate dependency groups.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ doc =
 	sphinxcontrib-bibtex
 	sphinx-copybutton
 min =
+	# For testing of oldest useable versions of dependencies.
 	joblib==0.12
 	nibabel==2.5.0
 	numpy==1.16
