Add comments to setup.cfg dependency groups.

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ tests_require =
 	requests
 
 [options.extras_require]
+# Requirements necessary for building the documentation
 doc =
 	cython
 	coverage
@@ -42,14 +43,15 @@ doc =
 	sphinx-gallery
 	sphinxcontrib-bibtex
 	sphinx-copybutton
+# For testing of oldest useable versions of dependencies.
 min =
-	# For testing of oldest useable versions of dependencies.
 	joblib==0.12
 	nibabel==2.5.0
 	numpy==1.16
 	pandas==0.24.0
 	scikit-learn==0.22
 	scipy==1.2.0
+# For running unit and docstring tests
 test =
 	coverage
 	cython
@@ -59,6 +61,7 @@ test =
 	pytest>=3.9
 	pytest-cov
 	requests
+# A combination of dependencies useful for developers
 dev =
 	%(doc)s
 	%(test)s
