--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,13 +26,15 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
+  # Install the standard and testing-related dependencies
+  # See setup.cfg for dependency group options
   - script: |
       python -m pip install --upgrade pip
       pip install pytest-azurepipelines codecov
+      pip install --prefer-binary .[test]
     displayName: 'Install dependencies'
 
   - script: |
-      pip install --prefer-binary .[dev]
       python -m pytest --pyargs nilearn --cov-report=xml --cov=nilearn --cov-append --junitxml=test-results.xml
     displayName: 'test'
 
