--- a/.github/workflows/auto-comment.yml
+++ b/.github/workflows/auto-comment.yml
@@ -11,21 +11,29 @@ jobs:
           pullRequestOpened: >
             👋 @{{ author }} Thanks for creating a PR!
 
+
             Until this PR is ready for review, you can include the [WIP] tag
             in its title, or leave it as a github draft.
+
 
             Please make sure it is compliant with our contributing guidelines.
             In particular, be sure it checks the boxes listed below.
 
             - [ ] PR has an interpretable title.
+
             - [ ] PR links to Github issue with mention "Closes #XXXX"
+
             - [ ] Code is PEP8-compliant.
+
             - [ ] (Bug fixes) There is at least one test that would fail
             under the original bug conditions.
+
             - [ ] (New features) There is at least one unit test per new
             function / class.
+
             - [ ] (New features) The new feature is demoed in at least one
             relevant example.
 
-             We will review it as quick as possible, feel free to ping us
-             with questions if needed.
+
+            We will review it as quick as possible, feel free to ping us with
+            questions if needed.
