--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ doc =
 	sphinx-gallery
 	sphinxcontrib-bibtex
 	sphinx-copybutton
-# For testing of oldest useable versions of dependencies.
+# For testing of oldest usable versions of dependencies.
 min =
 	joblib==0.12
 	nibabel==2.5.0
