[DOC] Repeated words

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,5 +21,5 @@ addopts =
 	--durations=0
 
 [codespell]
-skip = plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv
+skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv
 ignore-words = .github/codespell_ignore_words.txt
