--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,8 +209,8 @@ jobs:
 
   build_docs:
 
-    docker:
-      - image: circleci/python:3.8
+    machine:
+      image: ubuntu-2004:202111-01
 
     steps:
       - restore_cache:
