Add other requirements.

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,14 +24,16 @@ doc =
 	coverage
 	flake8
 	kaleido
+ 	memory_profiler
 	mkl
 	numpydoc
 	pillow
 	plotly
 	sphinx
+	sphinx-copybutton
 	sphinx-gallery
 	sphinxcontrib-bibtex
-	sphinx-copybutton
+	sphinxext-opengraph
 # For testing of oldest usable versions of dependencies.
 min =
 	joblib==0.12
