Break off plotting-related reqs into new group.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,6 @@ install_requires =
 	argparse
 	joblib>=0.12
 	lxml
-	matplotlib>=2.0
 	nibabel>=2.5
 	numpy>=1.16
 	pandas>=0.24
@@ -18,6 +17,12 @@ install_requires =
 	scipy>=1.2
 
 [options.extras_require]
+# Necessary reqs to use nilearn's plotting module
+plotting =
+	kaleido
+	matplotlib>=2.0
+	plotly
+
 # Requirements necessary for building the documentation
 doc =
 	cython
@@ -34,6 +39,7 @@ doc =
 	sphinx-gallery
 	sphinxcontrib-bibtex
 	sphinxext-opengraph
+
 # For testing of oldest usable versions of dependencies.
 min =
 	joblib==0.12
@@ -42,6 +48,7 @@ min =
 	pandas==0.24.0
 	scikit-learn==0.22
 	scipy==1.2.0
+
 # For running unit and docstring tests
 test =
 	codecov
@@ -52,8 +59,10 @@ test =
 	plotly
 	pytest>=3.9
 	pytest-cov
+
 # A combination of dependencies useful for developers
 dev =
+	%(plotting)s
 	%(doc)s
 	%(test)s
 
