Use new plotly group.

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,11 @@ install_requires =
 [options.extras_require]
 # Necessary reqs to use nilearn's plotting module
 plotting =
-	kaleido
 	matplotlib>=2.0
+
+# For surface plotting mostly
+plotly =
+	kaleido
 	plotly
 
 # Requirements necessary for building the documentation
@@ -34,6 +37,7 @@ doc =
 	pillow
 	plotly
 	sphinx
+	sphinx-build
 	sphinx-copybutton
 	sphinx-gallery
 	sphinxcontrib-bibtex
@@ -59,6 +63,7 @@ test =
 # A combination of dependencies useful for developers
 dev =
 	%(plotting)s
+	%(plotly)s
 	%(doc)s
 	%(test)s
 
