--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,8 +30,8 @@ jobs:
   # See setup.cfg for dependency group options
   - script: |
       python -m pip install --upgrade pip
-      pip install pytest-azurepipelines codecov
-      pip install --prefer-binary .[test]
+      pip install pytest-azurepipelines
+      pip install --prefer-binary .[plotting,plotly,test]
     displayName: 'Install dependencies'
 
   - script: |
