--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,7 +221,7 @@ jobs:
           name: Complete checkout
           command: |
               if ! git remote -v | grep upstream; then
-                  git remote add upstream git://github.com/nilearn/nilearn.git
+                  git remote add upstream git@github.com:nilearn/nilearn.git
               fi
               git fetch upstream
       - save_cache:
