[INFRA] Replace individual requirements files with setup.cfg (#2953)
* Add requirements from txt files.

* Remove dependencies from setup.py.

* Use dev options for Binder install.

* Fix indents.

* Update setup.cfg

* Install nilearn requirements in install.sh.

* Install nilearn dependencies with package in Azure workflow.

* Remove old requirements files.

* Remove core dependencies from extra groups.

* Sort dependencies for readability.

* Use test dependencies for CircleCI.

* Fix install instructions.

* Create new `min` dependency group with oldest useable versions.

* Remove unpinned reqs from min group.

* Try to use appropriate dependency groups.

* Pin to newer scikit-learn version.

* Add comments to setup.cfg dependency groups.

* Remove tests_require (turns out it's deprecated!)

* Add comments about installation groups.

* Set to minor releases in standard dependencies.

* `requests` is in version.py.

* I don't think `matplotlib` can be optional without checks.

* `argparse` is used in `nilearn.plotting.rm_file`.

* Fix typo.

* Change recommended local install from setup.py to pip.

* Remove dependency checks.

* Add general dependency check.

* Move testing-related dependencies to testing dep group.

* Update install.sh

* Deal with scikit-learn's unique name situation.

* Add other requirements.

* Break off plotting-related reqs into new group.

* Remove plotting reqs from test group.

* Use package installation to install reqs in tests.

* Revert dependency checks.

* Update version.py

* Update setup.cfg

* Use new plotly group.

* Update dependencies.sh

* sphinx-build is just sphinx

* Adopt minimal nibabel version from #3106.

* Update minimum requirements for 0.9.0.

* Toggle install based on matplotlib requirement.

* Add whatsnew entry.

* Apply suggestions from code review

Co-authored-by: Jérôme Dockès <jerome@dockes.org>

* Link to setup.cfg i

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,14 +26,15 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
+  # Install the standard and testing-related dependencies
+  # See setup.cfg for dependency group options
   - script: |
       python -m pip install --upgrade pip
-      pip install --prefer-binary -r requirements-dev.txt
-      pip install pytest-azurepipelines codecov
+      pip install pytest-azurepipelines
+      pip install --prefer-binary .[plotting,plotly,test]
     displayName: 'Install dependencies'
 
   - script: |
-      pip install .
       python -m pytest --pyargs nilearn --cov-report=xml --cov=nilearn --cov-append --junitxml=test-results.xml
     displayName: 'test'
 
