--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,69 @@
 [bdist_rpm]
 doc-files = doc
 
+[options]
+python_requires = >=3.6
+install_requires =
+	joblib>=0.15
+	lxml
+	nibabel>=3.0.0
+	numpy>=1.18
+	pandas>=1.0
+	requests>=2
+	scikit-learn>=0.22
+	scipy>=1.5
+
+[options.extras_require]
+# Necessary reqs to use nilearn's plotting module
+plotting =
+	matplotlib>=3.0
+
+# For surface plotting mostly
+plotly =
+	kaleido
+	plotly
+
+# Requirements necessary for building the documentation
+doc =
+	cython
+	coverage
+	flake8
+	kaleido
+ 	memory_profiler
+	mkl
+	numpydoc
+	pillow
+	plotly
+	sphinx
+	sphinx-copybutton
+	sphinx-gallery
+	sphinxcontrib-bibtex
+	sphinxext-opengraph
+
+# For testing of oldest usable versions of dependencies.
+min =
+	joblib==0.15
+	nibabel==3.0.0
+	numpy==1.18
+	pandas==1.0
+	scikit-learn==0.22
+	scipy==1.5
+
+# For running unit and docstring tests
+test =
+	codecov
+	coverage
+	cython
+	pytest>=3.9
+	pytest-cov
+
+# A combination of dependencies useful for developers
+dev =
+	%(plotting)s
+	%(plotly)s
+	%(doc)s
+	%(test)s
+
 [flake8]
 # For PEP8 error codes see
 # http://pep8.readthedocs.org/en/latest/intro.html#error-codes
