--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -12,6 +12,9 @@ jobs:
     name: Check for spelling errors
     runs-on: ubuntu-latest
 
+    with:
+      ignore_words_file: .github/codespell_ignore_words.txt
+
     steps:
       - uses: actions/checkout@v2
       - uses: codespell-project/actions-codespell@master
