Simplify doc requirements.

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,14 +27,13 @@ plotly =
 
 # Requirements necessary for building the documentation
 doc =
+	%(plotly)s
 	cython
 	coverage
 	flake8
-	kaleido
  	memory_profiler
 	numpydoc
 	pillow
-	plotly
 	sphinx
 	sphinx-copybutton
 	sphinx-gallery
