Add comment about memory_profiler.

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ doc =
 	%(plotly)s
 	coverage
 	flake8
- 	memory_profiler
+ 	memory_profiler  # measuring memory during docs building
 	numpydoc
 	pillow
 	sphinx
