[MAINT] Remove extraneous `doc` requirements (#3248)
* Remove mkl from requirements.

* Simplify doc requirements.

* Remove Cython.

* Add comment about memory_profiler.

* Remove pillow as well.

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,15 +27,11 @@ plotly =
 
 # Requirements necessary for building the documentation
 doc =
-	cython
+	%(plotly)s
 	coverage
 	flake8
-	kaleido
- 	memory_profiler
-	mkl
+ 	memory_profiler  # measuring memory during docs building
 	numpydoc
-	pillow
-	plotly
 	sphinx
 	sphinx-copybutton
 	sphinx-gallery
@@ -55,7 +51,6 @@ min =
 test =
 	codecov
 	coverage
-	cython
 	pytest>=3.9
 	pytest-cov
 
