Add missing dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,14 +30,17 @@ doc =
 	cython
 	coverage
 	flake8
+	furo
 	kaleido
  	memory_profiler
 	mkl
+	myst-parser
 	numpydoc
 	pillow
 	plotly
 	sphinx
 	sphinx-copybutton
+	sphinx-design
 	sphinx-gallery
 	sphinxcontrib-bibtex
 	sphinxext-opengraph
