New theme for documentation (#3125)
* Initial refactoring of documentation theme 🚀

* Improve landing page + fix examples sidebar hierarchy + new logos

* Featured examples for landing page

* Lower binder buttons position in visual hierarchy

* Fix PEP8 error

* Fix download button hover css

* Fix links to new category 00_tutorials

* Fix featured examples

* Bugfix doc dependency typo

* Change url type link for featured examples

* Fix failed conflict merge

* Upgrade whatsnew header

* Fix more labels for 00_tutorials

* Delete deprecated reference file

* Hide download notes in header

* Address tsalo's comments

* Remove useless toctrees and jupyter instructions from examples

* Address htwangtw's comments

* Fix multiline abstracts in bibliography

* Remove useless bullet point from references

* Remove useless note in tutorial

* Better looking references for plot_sphere_based_connectome.py

* Better looking code output

* Use furo css variables to handle light/dark modes for output snippets

* No indents for footbibliography in examples

* Some linting for doc conf file

* Update gitignore to ignore results from 00_tutorials

* Update tutorial to output csv to results folder

* Better looking placement for copy button

* Change pygments style to one with higher contrasts

* Better looking code snippets and code outputs

* Update examples/05_glm_second_level/README.txt

Co-authored-by: Elizabeth DuPre <emd222@cornell.edu>

* Add missing dependencies

* Add gallery params needed for latest version of sphinx-gallery

* Address Taylor's comments

* Address Jerome's comments

* Address Jerome's comments

* Remove useless annoucement bar

* Trigger CI

* Fix broken url in quickstart

* Fix multiple display bugs + missing api module maskers

* Add doc theme to latest changes

* Remove useless line from merge

* [circle full] Remove old nilearn custom theme

* [circle full] a

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,10 +30,14 @@ doc =
 	%(plotly)s
 	coverage
 	flake8
+	furo
  	memory_profiler  # measuring memory during docs building
+	mkl
+	myst-parser
 	numpydoc
 	sphinx
 	sphinx-copybutton
+	sphinx-design
 	sphinx-gallery
 	sphinxcontrib-bibtex
 	sphinxext-opengraph
