[CI] python-version should be a string, not a float
This shows clearly with '3.10' which is different from '3.1'.

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.6
+          python-version: "3.6"
         name: 'Setup python'
       - shell: bash -l {0}
         name: 'Display Python version'
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.6
+          python-version: "3.6"
         name: 'Setup python'
       - shell: bash -l {0}
         name: 'Display Python version'
