--- a/.github/workflows/trigger-hosting.yml
+++ b/.github/workflows/trigger-hosting.yml
@@ -11,7 +11,9 @@ jobs:
   push:
     runs-on: ubuntu-latest
     # Run the job only if the "Documentation builder" workflow succeeded
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # Prevents this workflow from running on a fork.
+    # To test this workflow on a fork remove the `github.repository == nilearn/nilearn` condition
+    if: github.repository == 'nilearn/nilearn' && github.event.workflow_run.conclusion == 'success'
     steps:
       - name: Checkout nilearn
         uses: actions/checkout@v3
