--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -10,7 +10,7 @@ on:
       - '*'
 
 jobs:
-  doc:
+  build_docs:
     # This prevents this workflow from running on a fork.
     # To test this workflow on a fork, uncomment the following line.
     if: github.repository == 'nilearn/nilearn'
@@ -73,7 +73,7 @@ jobs:
         run: |
           echo "PATTERN = $(cat pattern.txt)"
           echo "BUILD = $(cat build.txt)"
-      - name: build doc
+      - name: Build docs
         run: |
           source activate testenv;
           echo "Conda active env = $CONDA_DEFAULT_ENV";
