--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Complete checkout
         run: |
           if ! git remote -v | grep upstream; then
-            git remote add upstream git@github.com:nilearn/nilearn.git
+            git remote add upstream https://github.com/nilearn/nilearn.git
           fi
           git fetch upstream
       - name: Save source cache
